name:                advent-of-code2017
version:             0.1.0.0
synopsis:            Project for Advent of Code 2017
license:             MIT
license-file:        LICENSE
author:              Matteo Nardini
maintainer:          matteo.shalen@outlook.it
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10


executable advent-of-code2017
  main-is:             Main.hs
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.9 && <4.10
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  default-language:    Haskell2010
